docs:add documentation for project methods
